--- a/index.html
+++ b/index.html
@@ -51,20 +51,21 @@
 
         <div class="logeo">
         <p>Usuario</p>
-        <input type="text" placeholder="&#128100; Usuario" name="usuario" id="user" required>
+        <input type="text" placeholder="&#128100; Usuario" name="usuario" id="user">
         </div>
 
         <div class="logeo">
           <p>Contraseña</p>
-          <input type="password" placeholder="&#128272; Contraseña" name="contraseña" id="password" required>
+          <input type="password" placeholder="&#128272; Contraseña" name="contraseña" id="password">
         </div>
   
         <a href="#">Olvidaste tu contraseña?</a>
         
-        <input type="submit" id="btn" value="Ingresar">
+        <input type="submit" id="boton" value="Ingresar">
   </div>
 
   <script src="js/init.js"></script>
   <script src="js/login.js"></script>
+  <script src="js/fName.js"></script>
 </body>
 </html>
