--- a/index.html
+++ b/index.html
@@ -51,12 +51,12 @@
 
         <div class="logeo">
         <p>Usuario</p>
-        <input type="text" placeholder="&#128100; Usuario" name="usuario" id="user">
+        <input type="text" placeholder="&#128100; Usuario" name="usuario" id="user" required>
         </div>
 
         <div class="logeo">
           <p>Contraseña</p>
-          <input type="password" placeholder="&#128272; Contraseña" name="contraseña" id="password">
+          <input type="password" placeholder="&#128272; Contraseña" name="contraseña" id="password" required>
         </div>
   
         <a href="#">Olvidaste tu contraseña?</a>
