Agregado de productos relacionados

--- a/product-info.html
+++ b/product-info.html
@@ -27,9 +27,12 @@
     </div>
   </nav>
 
- <div class="container p-5" id="prodInfo">
-   
- </div>
+ <div class="container p-5" id="prodInfo"></div>
+<hr>
+ <div class="container p-5 row text-center text-lg-left pt-2 " id="relatedProducts"></div>
+
+ <div class="container p-5" id="infoComments"></div><!--Falta-->
+
 
   <footer class="text-muted">
     <div class="container">
