--- a/product-info.html
+++ b/product-info.html
@@ -35,7 +35,7 @@
   <div class="container p-5 row text-center text-lg-left pt-2 " id="relatedProducts"></div>
   <hr>
   
-  <dt>Comentarios</dt>
+  <dt>Comentarios</dt><br>
   <dd>
     <ul id="infoComments" class="p-0"></ul>
   </dd>
