--- a/cart.html
+++ b/cart.html
@@ -103,6 +103,67 @@
     </div>
   </div>
 
+  <button class="btn btn-primary" data-toggle="modal" data-target="#ventanaModal">
+    Metodo de Pago
+  </button>
+
+  <div class="modal fade" id="ventanaModal" tabindex="-1" role="dialog" aria-labelledby="tituloVentana" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+      <div class="modal-content">
+
+        <!-- Encabezado del Modal -->
+        <div class="modal-header">
+          <h5 class="modal-title" id="tituloVentana">Metodos de Pago</h5>
+          <button class="close" data-dismiss="modal" aria-label="Cerrar"><span aria-hidden="true">&times;</span></button>
+        </div>
+
+        <!-- Cuerpo del Modal -->
+        <div class="modal-body">
+          <!-- Formulario -->
+          <form> 
+            <!-- Datos del Usuario -->
+            <div class="form-group">
+              <label for="nombre">Nombre</label>
+              <input type="text" class="form-control" id="nombre" placeholder="Introduzca Nombre Completo">
+            </div>
+            <div class="form-group">
+              <label for="direccionEmail">Email</label>
+              <input type="email" class="form-control" id="direccionEmail" placeholder="Introduzca su Email" >
+            </div>
+
+            <!-- seleccionar el metodo -->
+            <div class="form-group form-check">
+              <input type="radio" class="form-check-input" id="exampleCheck1">
+              <label class="form-check-label" for="exampleCheck1">Mastercard</label>
+              <br>
+              <input type="radio" class="form-check-input" id="exampleCheck2">
+              <label class="form-check-label" for="exampleCheck1">Visa</label>
+              <br>
+              <input type="radio" class="form-check-input" id="exampleCheck3">
+              <label class="form-check-label" for="exampleCheck1">Mercado Pago</label>
+            </div>
+
+            <!-- Datos Tarjeta -->
+            <div class="datos-tarjeta">
+              <div class="form-group">
+                <label for="numTarjeta">Numero de Tarjeta</label>
+                <input type="text" class="form-control" id="numTarjeta" placeholder="Introduzca el número de su Tarjeta">
+              </div>
+              <div class="form-group">
+                <label for="Codigo de Seguridad">Codigo de Seguridad</label>
+                <input type="text" class="form-control" id="Codigo de Seguridad" placeholder="Introduzca el codigo de seguridad">
+              </div>
+            </div>
+
+        <!-- Pie del Modal -->
+        <div class="modal-footer">
+          <button class="btn btn-secondary" type="button" data-dismiss="modal">Cerrar</button>
+          <button class="btn btn-primary" type="button">Pagar</button>
+        </div>
+      </div>
+    </div>
+  </div>
+
 
 
 
