Centrado de boton de pago

--- a/cart.html
+++ b/cart.html
@@ -103,9 +103,11 @@
     </div>
   </div>
 
-  <button class="btn btn-primary" data-toggle="modal" data-target="#ventanaModal">
-    Metodo de Pago
-  </button>
+  <div class="container">
+    <button class="btn btn-primary" data-toggle="modal" data-target="#ventanaModal">
+      Metodo de Pago
+    </button>
+  </div>
 
   <div class="modal fade" id="ventanaModal" tabindex="-1" role="dialog" aria-labelledby="tituloVentana" aria-hidden="true">
     <div class="modal-dialog" role="document">
