-Correcion de las barras de navegacion -Agregado de funcion para cerrar sesion borrando el localS

--- a/firstpage.html
+++ b/firstpage.html
@@ -43,7 +43,7 @@
           <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
             <a class="dropdown-item" href="my-profile.html">Mi Perfil</a>
             <a class="dropdown-item" href="cart.html">Carrito</a>
-            <a class="dropdown-item" onclick="closeSession()">Cerrar Sesíon</a>
+            <a class="dropdown-item" onclick=closeSession()>Cerrar Sesíon</a>>
           </div>
         </div>
       </ul>
