--- a/sell.html
+++ b/sell.html
@@ -47,6 +47,7 @@
           </li>
         </ul>
       </div>
+  
       <div>
         <ul class="navbar-nav">
           <div class="nav-item dropdown ">
@@ -57,7 +58,7 @@
             <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
               <a class="dropdown-item" href="my-profile.html">Mi Perfil</a>
               <a class="dropdown-item" href="cart.html">Carrito</a>
-              <a class="dropdown-item" href="index.html">Cerrar Sesíon</a>
+              <a class="dropdown-item" onclick=closeSession()>Cerrar Sesíon</a>
             </div>
           </div>
         </ul>
