Empezando cambios en pagina de inicio

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <style>
     html, body{
       height: 100%;
-      background-image: url(img/loginn.jpg);
+      background-image: url(img/Verde\ Neón\ y\ Azul\ Conferencia\ de\ Negocios\ Eventos\ Sitio\ Web.png);
       background-size: cover;
     }
 
@@ -39,10 +39,7 @@
   </style>
 </head>
 
-<body class="text-center">
-  <div class="log">
-    <img src="svg/Mobile login-amico2.png" width="500px" alt="">
-  </div>
+<body class="text-center bodyCher">
   <div class="container p-5">
       <form action="firstpage.html">
         <h2>Bienvenido a e-Commerce</h2>
